--- a/css/main.css
+++ b/css/main.css
@@ -3,27 +3,25 @@
     font-family: Raleway, sans-serif;
 }
 
-.site-header {
-    width: 1440px;
-    margin: auto;
-    border: 5px solid red;
+body {
+    margin:0;
+    padding:0;
 }
 
-.site-header--top-bar{
+.container{
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.site-header--top-bar {
     display: flex;
     justify-content: space-between;
-    width: 1340px;
-    margin: 0 auto;
-    border: 5px solid blue;
+    width: 100%;
 }
 
 .site-header--logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 161.09px;
-    height: 79px;
-    border: 5px solid green;
+    padding: 30px 50px 60px 0;
 }
 
 .site-header--booki {
@@ -33,34 +31,39 @@
 
 .site-header--menu {
     width: 344px;
-    height: 35px;
-    border: 5px solid black;
 }
 
 .site-header--list {
-    display: flex;
-    justify-content: center;
-    gap: 68px;
     margin: 0;
-    padding: 0 50px 0 50px;
+    padding: 0;
     list-style: none;
-    border : 2px solid yellowgreen;
 }
 
-.site-header--link:hover {
-    text-decoration: underline;
-    text-underline-offset: -2rem;
-    text-decoration-thickness: 2px;
+.site-header--list li {
+    display: inline-block;
+    margin-left: 15px;
+}
+
+.site-header--list li a {
+    padding: 15px 0;
+    display: block;
+    text-decoration: none;
+    color:black;
+    border-top: 2px solid transparent;
+}
+
+.site-header--list li a.current,
+.site-header--list li a:focus, 
+.site-header--list li a:hover {
     color: #0065FC;
+    border-top: 2px solid #0065FC;
 }
 
 .site-header--info-group {
     display: flex;
     flex-direction: column;
     gap: 35px;
-    width: 1340px;
-    margin: auto;
-    border: 5px solid orange;
+    width: 100%;
 }
 
 .site-header--headline {
@@ -69,7 +72,6 @@
     justify-content: center;
     gap: 8px;
     width: 100%;
-    border: 5px solid black;
 }
 
 .site-header--headline h1 {
@@ -94,9 +96,9 @@
     display: flex;
     justify-content:center;
     align-items: center;
-    width: 377px;
+    width: 100%;
+    max-width: 377px;
     height: 49px;
-    gap: 24px;
     border: 1px solid #F2F2F2;
     border-radius: 15px;
 }
@@ -105,18 +107,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 49px;
+    width: 13%;
+    height: 100%;
     border: 1px solid #F2F2F2;
     border-radius: 15px 0 0 15px;
     background-color: #F2F2F2;
+    padding:0 15px;
 }
 
 .site-header--form {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
+    height: 100%;
+    width:52%;
+    padding:0 15px;
 }
 
 .site-header--input {
@@ -132,20 +137,16 @@
 }
 
 .site-header--finder {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 132px;
-    height: 49px;
+    width: 35%;
+    height: 100%;
     border: 1px solid #0065FC;
     border-radius: 0 15px 15px 0;
     background-color: #0065FC;
-    gap: 10px;
 }
 
 .site-header--button {
-    width: 100px;
-    height: 21px;
+    width: 100%;
+    height: 100%;
     font-weight: 700;
     font-size: 18px;
     line-height: 21.13px;
@@ -153,92 +154,51 @@
     color: #FFFFFF;
     background-color: #0065FC;
     border: none;
+    border-radius: 0 15px 15px 0;
+    padding:0 15px;
 }
 
 
 .site-header--filter-bar {
+    width: 100%;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 758px;
-    height: 50px;
-    gap:15px;
-    border: 5px solid green;
+    gap: 10px;
+}
+
+.site-header--filter-bar .filter {
+    display: flex;
 }
 
 .site-header--filter-title {
-    width: 54px;
-    height: 21px;
     font-weight: 700;
     font-size: 18px;
     line-height: 21.13px;
     text-align: center;
     color: rgba(0, 0, 0, 1);
+    margin: auto;
 }
 
 .site-header--filter-bar i {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 22px;
     height: 22px;
     color: #0065FC;
+    text-align: center;
 }
 
-.site-header--text-eco, .site-header--text-family, 
-.site-header--text-romantic, .site-header--text-nuggets {
+.site-header--filter-bar .tag {
+    margin:5px;
+    padding: 10px 19px;
+    border: 2px solid #D9D9D9;
+    border-radius: 25px;
+    display: inline-block;
+}
+
+.site-header--filter-bar .tag span {
     font-weight: 700;
     font-size: 17px;
     line-height:19.96px;
     height: 20px;
     color: rgba(0, 0, 0, 1);
-}
-
-.site-header--button-eco, .site-header--button-family,
-.site-header--button-romantic,.site-header--button-nuggets {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 4px 19px 4px 19px;
-    gap: 10px;
-    border: 2px solid #D9D9D9;
-    border-radius: 25px;
-} 
-
-.site-header--button-eco {
-    width: 173px;
-    height: 50px;
-}
- 
-.site-header--text-eco {
-    width: 103px;
-}
-
-.site-header--button-family {
-    width: 134px;
-    height: 50px;
-}
-
-.site-header--text-family {
-    width: 64px;
-}
-
-.site-header--button-romantic {
-    width: 170px;
-    height: 50px;
-}
-
-.site-header--text-romantic {
-    width: 100px;
-}
-
-.site-header--button-nuggets {
-    width: 167px;
-    height: 50px;
-}
-
-.site-header--text-nuggets {
-    width: 117px;
 }
 
 .site-header--info {
@@ -248,7 +208,7 @@
     gap: 10px;
     width: 100%;
     height: 24px;
-    border: 5px solid black;
+    margin-bottom:30px;
 }
 
 .site-header--info i {
@@ -260,19 +220,11 @@
     color: #0065FC;
 }
 
-.site-content {
-    width: 1440px;
-    margin: auto;
-    border: 5px solid red;
-}
-
 .site-content--group {
     display: flex;
     justify-content: space-between;
-    width: 1340px;
-    height: 614px;
-    margin: 0 auto;
-    border: 5px solid orange;
+    gap:30px;
+    width: 100%;
 }
 
 .site-content--offers-main {
@@ -280,44 +232,40 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 871px;
-    height: 614px;
+    width: 70%;
     padding: 30px;
     border-radius: 15px;
     gap: 30px;
     background-color: #F2F2F2;
-    border: 5px solid black;
 
 }
 
 .site-content--row-title {
-    width: 811px;
-    height: 26px;
     margin: 0;
     font-weight: 700;
     font-size: 22px;
-    line-height: 25.83px;
+    line-height: 26px;
     color: rgba(0, 0, 0, 1);
 }
 
 .site-content--row-cards {
-    display: flex;
-    width: 811px;
-    height: 207.25px;
-    gap: 30px;
-    border: 2px solid green;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap:30px;
 }
 
 .site-content--card {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 4px;
-    width: 250.33px;
-    height: 207.25px;
     padding: 0 0 15px 0;
     border-radius: 20px;
     box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1);
+    min-height: 210px;
 }
 
 .site-content--picture {
@@ -336,7 +284,6 @@
 }
 
 .site-content--card-info h3 {
-    width: 220.33px;
     height: 19px;
     margin: 0;
     font-weight: 700;
@@ -346,7 +293,6 @@
 }
 
 .site-content--card-info span {
-    width: 223.33px;
     height: 16px;
     font-weight: 400;
     font-size: 14px;
@@ -375,20 +321,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 429px;
-    height: 614px;
+    width: 30%;
     padding: 30px;
     gap: 30px;
     border-radius: 15px;
     background-color: #F2F2F2;
-    border: 5px solid green;
 }
 
 .site-content--sponsored-title {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 369px;
     height: 26px;
 }
 
@@ -415,7 +359,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 369px;
+    width: 100%;
     height: 498px;
     gap: 30px;
 
@@ -424,8 +368,8 @@
 .site-content--pic-card {
     display: flex;
     justify-content: space-between;
-    width: 369px;
-    height: 146px;
+    width: 100%;
+    min-height: 146px;
     border-radius: 20px;
     background-color: #FFFFFF;
     box-shadow: 0px 3px 15px 0px #0000001A;
@@ -482,44 +426,39 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    width: 1340px;
     height: 559.02px;
     margin: auto;
     padding: 30px;
     gap: 30px;
-    border: 5px solid orange;
 }
 
 .site-content--activity-title {
-    width: 1280px;
-    height: 30.02px;
+    width: 100%;
     font-weight: 700;
     font-size: 22px;
-    line-height: 25.83px;
-    color: rgba(0, 0, 0, 1)
+    line-height: 26px;
+    color: rgba(0, 0, 0, 1);
+    margin:60px 30px 30px 30px;
 }
 
 .site-content--activity-frame {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1280px;
     height: 439px;
     gap: 30px;
-    border: 5px solid blue;
+    margin:0 30px 60px 30px;
 }
 
 .site-content-card {
-    width: 297.5px;
+    width: 25%;
     height: 439px;
     border-radius: 20px;
     box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1);
-    border: 5px solid green;
 }
 
 .site-content--activity-pic {
-    width: 297.5px;
+    width: 100%;
     height: 380px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
@@ -549,272 +488,72 @@
     color: rgba(0, 0, 0, 1)
 }
 
-
-.site-footer {
-    width: 1440px;
-    margin: auto;
-    border: 5px solid red;
-}
-
-.site-footer--content {
+.site-footer{
+    width: 100%;
     display: flex;
-    align-items: center;
-    width: 1340px;
-    height: 163px;
-    margin: auto;
-    background: rgba(242, 242, 242, 1);
-    border: 5px solid orange;
+    justify-content: space-between;
+    background-color: #F2F2F2;
+    padding: 20px;
 }
 
-.site-footer--info {
+.site-info {
     display: flex;
     flex-direction: column;
-    
-    width: 446.67px;
-    height: 163px;
-    padding: 20px;
+    width: 33.3333%;
     gap: 15px;
-    border: 5px solid blue;
 }
-.site-footer--about, .site-footer--our-rentals, .site-footer--assistance {
-    margin: 0;
-    height: 21px;
+
+.site-info h3{
+    font-size:18px;
     font-weight: 700;
-    font-size: 18px;
-    line-height: 21.13px;
+    line-height:21px;
+    margin:0;
 }
 
-.site-footer--about {
-    width: 77px;
-    
-}
-
-.site-footer--our-rentals {
-    width: 165px;
-}
-
-.site-footer--assistance {
-    width: 93px;
-}
-
-.site-footer--howto, .site-footer--rules, .site-footer--data,
-.site-footer--charter, .site-footer--your-hotel, 
-.site-footer--help-center, .site-footer--contact-us {
-    margin: 0;
-    height: 19px;
+.site-info a{
+    font-size:16px;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 18.78px;
-}
-
-.site-footer--howto {
-    width: 176px;
-}
-
-.site-footer--rules {
-    width: 176px;
-}
-
-.site-footer--data {
-    width: 194px;
-}
-
-.site-footer--charter {
-    width: 104px;
-}
-
-.site-footer--your-hotel {
-    width: 150px;
-}
-
-.site-footer--help-center {
-    width: 97px;
-}
-
-.site-footer--contact-us {
-    width: 114px;
+    line-height: 19px;
 }
 
 
 
+@media only screen and (max-width: 1440px) {
 
+    .container{
+        padding: 30px;
+    }
 
+    .site-content--group{
+        display: block;        
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* For small devices (phones, less than 768px)*/
-
-@media only screen and (min-width: 320px) and (max-width: 768px) {
-    
-    .site-header {
+    .site-content--offers-main, .site-content--offers-sponsored{
         width: 100%;
-
-    }
-
-    .site-header--top-bar {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .site-header--menu {
-        width: 100%;
-    }
-
-    .site-header--info-group {
-        width: 100%;
-    }
-
-    .site-header--headline {
-        width: 100%;
-    }
-
-    .site-header--search-bar {
-        width: 100%;
-    }
-
-    .site-header--filter-bar {
-        width: 100%;
-        height: 161px;
-        display: grid;
-        justify-content: center;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        gap: 10px;
-    }
-
-    .site-header--filter-title {
-        grid-column-start: 1;
-        grid-column-end: 3;
-    }
-
-    .site-header--button-eco, .site-header--button-romantic {
-        grid-column-start: 1;
-        grid-column-end: 2;
-        width: 100%;
-        padding: 0;
-    }
-
-    .site-header--button-family, .site-header--button-nuggets {
-        grid-column-start: 2;
-        grid-column-end: 3;
-        width: 100%;
-        padding: 0;
-    }
-
-    .site-header--info {
-        width: 100%;
-        height: 38px;
-    }
-
-    .site-header--text-eco, .site-header--text-family,
-    .site-header--text-romantic, .site-header--text-nuggets {
-        font-size: 14px;
-        line-height: 16.44px;;
-
-
     }
     
+
+
+
 }
 
 
+@media only screen and (min-width: 1024px) and (max-width: 1440px) {
 
-/* For medium devices ( tablets, less/equal than 1024px)*/
+
+}
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
-    .site-header, .site-header--top-bar, .site-header--info-group,
-    .site-content, .site-content--group, .site-content--offers-main {
-        width: 100%;
-    }
 
-    .site-content--group {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 100%;
-        height: 913.5px;
-        margin: 0 auto;
-        border: 5px solid orange;
-    }
-
-    .site-content--offers-sponsored {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items:center;
-        width: 100%;
-        height: 252px;
-        padding: 30px;
-        gap: 20px;
-        border-radius: 15px;
-        background-color: #F2F2F2;
-        border: 5px solid green;
-    }
-
-    .site-content--sponsored-title {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-    }
-
-    .site-content--col-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 20px;
-        width: 100%;
-        border: 5px solid black;
-    }
-
-    .site-content--pic-card {
-        width: 274.67px;
-        
-    }
-
-    .site-content--col-picture {
-        width: 91.56px;
-
-    }
-
-    .site-content--col-card-info {
-        width: 183.11px;
-    }
-
-    .site-content--col-card-one {
-        width: 163.11px;
-
-    }
 }
 
-    
+@media only screen and (min-width: 320px) and (max-width: 768px) {
 
+    .site-content--row-cards {
+        grid-template-columns: 1fr;
+      } 
 
-/* For large devices ( PC, equal/more than 1024px) */
-
-@media only screen and (min-width: 1024px) and (max-width: 1440px) {
-    .site-header, .site-header--top-bar, .site-header--info-group,
-    .site-content, .site-content--group, .site-content--offers-sponsored {
-        width: 100%;
-    }
-
-    
 }
 
 
