--- a/css/main.css
+++ b/css/main.css
@@ -162,11 +162,10 @@ body {
 .site-header--filter-bar {
     width: 100%;
     display: flex;
-    gap: 10px;
 }
 
 .site-header--filter-bar .filter {
-    display: flex;
+    margin: auto 0; 
 }
 
 .site-header--filter-title {
@@ -199,9 +198,7 @@ body {
 
 .site-header--filter-bar .tag span {
     font-weight: 700;
-    font-size: 17px;
-    line-height:19.96px;
-    height: 20px;
+    /*font-size: 17px;*/
     color: rgba(0, 0, 0, 1);
 }
 
@@ -237,6 +234,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     width: 70%;
+    height: 614px;
     padding: 30px;
     border-radius: 15px;
     gap: 30px;
@@ -547,20 +545,294 @@ body {
 
 
 @media only screen and (min-width: 1024px) and (max-width: 1440px) {
+    .site-content--offers-sponsored {
+        margin-top: 50px;
+        height: 252px;
+        gap: 20px;
+    }
 
+    .site-content--sponsored-title {
+        margin-top: 10px;
+    }
+
+    .site-content--col-cards {
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .site-content--pic-card {
+        width: 33.33%
+    
+    }
+
+    .site-content--col-picture {
+      width: 35%;
+      height: 146px;
+    }
+
+    .site-content--col-card-info {
+        width: 65%;
+    }
+
+    .site-content--col-card-one, .site-content--col-card-two, 
+    .site-content--col-card-three {
+        width: 100%;
+    }
+
+    .site-content--activity-title {
+        margin: 0 0 30px 0;
+    }
+
+    .site-content--activity-frame {
+        margin: auto;
+    }
+
+    .site-content-card {
+        width: 25%;
+    }
+
+    .site-content--activity-legend {
+        width: 100%;
+    }
+
+    .site-content--activity-legend a {
+        width: 100%;
+    }
+
+    .site-footer {
+        gap: 100px;
+    }
 
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
+    .site-header--filter-bar {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .site-header--filter-bar .filter {
+        margin: 0;
+        padding: 0;
+        height: 21px;
+    }
+
+    .site-header--filter-tag {
+        width: 100%;
+        
+    }
+    
+
+    .site-content--offers-sponsored {
+        margin-top: 50px;
+        height: 252px;
+        gap: 20px;
+    }
+
+    .site-content--sponsored-title {
+        margin-top: 10px;
+    }
+
+    .site-content--col-cards {
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .site-content--pic-card {
+        width: 33.33%
+    
+    }
+
+    .site-content--col-picture {
+      width: 35%;
+      height: 146px;
+    }
+
+    .site-content--col-card-info {
+        width: 65%;
+    }
+
+    .site-content--col-card-one, .site-content--col-card-two, 
+    .site-content--col-card-three {
+        width: 100%;
+    }
+
+    .site-content--activity-title {
+        margin: 0 0 30px 0;
+    }
+
+    .site-content--activity-frame {
+        margin: auto;
+    }
+
+    .site-content-card {
+        width: 25%;
+    }
+
+    .site-content--activity-legend {
+        width: 100%;
+    }
+
+    .site-content--activity-legend a {
+        width: 100%;
+    }
+
+    .site-footer {
+        gap: 100px;
+    }
 
 }
 
+    
+
 @media only screen and (min-width: 320px) and (max-width: 768px) {
 
+    .container {
+        min-width: 320px;
+        padding: 20px;
+    }
+    
+    .site-header--top-bar {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .site-header--logo {
+        padding: 0;
+    }
+
+    .site-header--list {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        gap: 15px;
+    }
+
+    .site-header--list li {
+        margin: 0;
+    }
+
+    .site-header--list li a {
+        border-bottom: 2px solid transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;;
+    }
+
+    .site-header--list li a:hover {
+        border-bottom: 2px solid #0065FC;
+        border-top: 2px solid transparent;
+    }
+
+    .site-header--filter-bar .filter {
+        margin-bottom: 20px;
+    }
+
+
+    .site-header--filter-bar {
+        display: block;
+        
+        
+    }
+
+    .site-header--filter-tag {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 10px;
+        
+    }
+
+    .site-header--filter-tag .tag {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+        padding: 4px 19px;
+        margin: 10px 0;
+        
+    }
+
+    .site-header--text-eco, .site-header--text-family, 
+    .site-header--text-romantic, .site-header--text-nuggets {
+        font-size: 14px;
+    }
+
+    .site-content--group {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+    }
+
+    .site-content--offers-sponsored {
+        height: 569px;
+        display: block;
+    }
+
+    .site-content--offers-main {
+        height: 1436px;
+        display: block;
+    }
+
+    .site-content--row-title {
+        margin-bottom: 15px;;
+    }
+
     .site-content--row-cards {
-        grid-template-columns: 1fr;
-      } 
+        display: block;
+    }
+
+    .site-content--display-more {
+        margin-top: 15px;
+    }
+
+  
+
+    .site-content--activity-frame {
+        display: block;
+        height: 845px;
+    }
+
+    .site-content-card {
+        width: 100%;
+        height: 200px;
+        margin-bottom: 20px;;
+   }
+
+   .site-content--activity-pic {
+    height: 141px;
+   }
+    
+    .site-footer {
+        height: 461px;
+        padding: 30px;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .site-info {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 15px;
+
+    }
 
 }
 
