--- a/css/main.css
+++ b/css/main.css
@@ -530,6 +530,10 @@ body {
         padding: 30px;
     }
 
+    .fa-magnifying-glass {
+        display: none;
+    }
+
     .site-content--group{
         display: block;        
     }
@@ -545,6 +549,11 @@ body {
 
 
 @media only screen and (min-width: 1024px) and (max-width: 1440px) {
+    
+    .fa-magnifying-glass {
+        display: none;
+    }
+    
     .site-content--offers-sponsored {
         margin-top: 50px;
         height: 252px;
@@ -612,6 +621,10 @@ body {
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
+    .fa-magnifying-glass {
+        display: none;
+    }
+    
     .site-header--filter-bar {
         display: flex;
         flex-direction: column;
@@ -738,6 +751,29 @@ body {
         border-top: 2px solid transparent;
     }
 
+    .site-header--search-bar {
+        justify-content: space-between;
+    }
+
+    .site-header--finder {
+        width: 15%;
+        text-align: center;
+        border-radius: 15px 16px;
+    }
+
+    .site-header--button {
+        display: none;
+    }
+
+    .fa-magnifying-glass {
+        color: #FFFFFF;
+        width: 17px;
+        height: 17px;
+        margin-top: 15px;;
+        
+    }
+
+
     .site-header--filter-bar .filter {
         margin-bottom: 20px;
     }
@@ -745,7 +781,6 @@ body {
 
     .site-header--filter-bar {
         display: block;
-        
         
     }
 
