--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,9 @@ i.fa-solid {
 /* Main offers group */
 
 .site-content--offers-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     width: 66%;
     height: 614px;
     padding: 30px;
@@ -212,9 +215,9 @@ i.fa-solid {
 .site-content--main-row-cards {
     display: flex;
     justify-content: space-between;
-    height: 250px;
+    height: 33%;
     margin-bottom: 20px;
-    gap: 10px;
+    gap: 30px;
 }
 
 .site-content--row-card {
@@ -236,9 +239,7 @@ i.fa-solid {
 .site-content--row-card-info {
     display: flex;
     flex-direction: column;
-    padding: 0 15px 0 15px;
-    gap: 8px;
-    
+    padding: 0 15px 0 15px;   
 }
 
 .site-content--row-card-info span {
@@ -258,7 +259,7 @@ i.fa-solid {
 }
 
 .fa-star::before {
-    content: "\f005\f005\f005\f005\f005";
+    content: "\f005\f005\f005\f005";
     color: #0065FC;
 }
 
@@ -270,6 +271,8 @@ i.fa-solid {
 /* Offers sponsored group */
 
 .site-content--sponsored-main {
+    display: flex;
+    flex-direction: column;
     width: 34%;
     height: 614px;
     border-radius: 15px;
@@ -280,7 +283,7 @@ i.fa-solid {
 .site-content--sponsored-title {
     font-size: 1.3rem;
     font-weight: 700;
-    margin-top: 20px;;
+    margin-top: 30px;
 }
 
 .site-content--sponsored-col-cards {
@@ -293,7 +296,7 @@ i.fa-solid {
 
 .site-content--col-card {
     display: flex;
-    height: 33%;
+    height: 29%;
     width: 100%;
     border-radius: 20px;
     background-color: #FFFFFF;
@@ -310,12 +313,15 @@ i.fa-solid {
 }
 
 .site-content--col-card-info {
-    width: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 56%;
     padding: 10px 5px 5px 15px;
 }
 
 .site-content--col-card-info i {
-    margin-top: 35px;
+    /*margin-top: 35px;*/
 }
 
 .site-content--col-card-info h2 {
@@ -335,16 +341,22 @@ i.fa-solid {
     margin: auto;
 }
 
+.site-content--activity {
+    height: 559px;
+}
+
 .site-content--activity-title {
     font-size: 1.3rem;
     font-weight: 700;
-    margin: 40px 0 20px 30px;
+    margin: 50px auto 20px;
+    width: 95%;
 }
 
 .site-content--activity-frame {
     display: flex;
     justify-content: space-between;
     width: 95%;
+    height: 79%;
     margin: auto;
     gap:30px;
 }
@@ -356,7 +368,7 @@ i.fa-solid {
 }
 
 .site-content--activity-pic {
-    height:86%;
+    height:87%;
     width: 100%;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
@@ -378,11 +390,10 @@ i.fa-solid {
 
 .site-footer {
     display: flex;
-    justify-content: space-between;
     background-color: #F2F2F2;
     width: 90%;
     padding: 20px;
-    margin: 50px auto;
+    margin: 20px auto;
 }
 
 .site-footer--info {
@@ -406,7 +417,7 @@ i.fa-solid {
 
 /****** Media queries ***********/
 
-/* For smartphone */
+/* Small devices (phones, less than 768px) */
 
 @media screen and (min-width: 320px) and (max-width: 767.98px) {
     
@@ -552,6 +563,7 @@ i.fa-solid {
         max-width: 335px;
         width: 100%;
         height: 1435px;
+        gap: 50px;
         margin: auto;
         padding: 0;
         background-color: #FFFFFF;
@@ -581,7 +593,8 @@ i.fa-solid {
         display: flex;
         flex-direction: column;
         width: 100%;
-        margin: auto;
+        height: 965px;
+        margin: 50px auto;
         padding: 0;
     }
 
@@ -612,20 +625,21 @@ i.fa-solid {
     }
 
     .site-footer {
-        max-width: 375px;
+        max-width: 315px;
         width: 100%;
+        margin: 100px auto;
         flex-direction: column;
+        justify-content: space-between;
         gap: 50px;
     }
 
     .site-footer--info {
         width: 70%;
-        
     }
 }
 
 
-/* For tablets */
+/* Medium devices (tablets, less than 1024px) */
 
 @media screen and (min-width: 768px) and (max-width: 1023.98px) {
 
@@ -735,7 +749,14 @@ i.fa-solid {
 
     .site-content--col-card i {
         margin: 0;
-        
+    }
+
+    .site-content--main-activity {
+        height: 390px;
+    }
+
+    .site-content--activity {
+        height: 100%;
     }
 
     .site-content--activity {
@@ -758,9 +779,13 @@ i.fa-solid {
     .site-content--activity-legend {
         padding: 10px;
     }
+
+    .site-content--activity-place {
+        font-size: 0.9rem;
+    }
 }
 
-/* For desktop */
+/* Large devices (PC, less/equal than 1440px) */
 
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
     
@@ -803,7 +828,6 @@ i.fa-solid {
     }
 
     .site-content--sponsored-main {
-        min-width: 924px;
         width: 93%;
         height: 252px;
         margin: auto;
@@ -826,6 +850,7 @@ i.fa-solid {
     .site-content--activity {
         min-width: 924px;
         width: 93%;
+        height: 390px;
         margin: auto;
     }
     
@@ -834,11 +859,15 @@ i.fa-solid {
     }
 
     .site-content--activity-frame {
-        height: 100%;
+        height: 70%;
     }
 
     .site-content--activity-pic {
-        height: 80%;
+        height: 74%;
+    }
+
+    .site-content--activity-legend {
+        padding: 15px 19px;
     }
 
 }
