--- a/css/main.css
+++ b/css/main.css
@@ -561,8 +561,8 @@
 
     .site-header--filters-tag {
         display: flex;
-        justify-content: flex-start;
-        padding: 12px 15px;
+        justify-content: center;
+        padding: 12px 4px;
     }
 
     .site-header--filters-tag-name {
